kubernetes/kub-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kub-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubernetes
  template:
    metadata:
      labels:
        app: kubernetes
    spec:
      containers:
      - name: nginx
        image: nginx
      - name: kubernetes
        image: langston8182/kubernetes:0.0.9-SNAPSHOT
        imagePullPolicy: Always
      imagePullSecrets:
      - name: kub-secret
