kubernetes/nodeExporter-deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter-daemon
  labels:
    app: node-exporter-daemon
spec:
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
      annotations:
        prometheus.io/port: "9100"
        prometheus.io/scrape: "true"
    spec:
      containers:
      - name: node-exporter
        image: prom/node-exporter
        ports:
        - containerPort: 9100
