kubernetes/prom-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prom-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus
        volumeMounts:
        - mountPath: /etc/prometheus/
          name: config
      volumes:
      - name: config
        configMap:
          name: prometheus-server-conf
