kubernetes/db-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-services
  labels:
    app: db
spec:
  selector:
    app: db
  type: ClusterIP
  ports:
  - port: 3307
    targetPort: 3306
