kubernetes/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  labels:
    app: grafana-service
spec:
  selector:
    app: grafana
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 31200
