kubernetes/kub-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: kub-services
  labels:
    app: kubernetes
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: kubernetes
