kubernetes/prom-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prom-service
  labels:
    app: prom-service
spec:
  selector:
    app: prometheus
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9090
    nodePort: 31000
