kubernetes/kub-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kub-ingress
spec:
  rules:
  - host: masters.kubernetes.cyrilmarchive.com
    http:
      paths:
      - backend:
          serviceName: kub-services
          servicePort: 8080
